Refactor: Rename MatchEvent (JSON) to MatchEventSnapshot and eliminate fully qualified names in many classes